@@ -1,7 +1,7 @@
 #!/bin/bash
 
 # NOTE: This is set by setversion.py
-VERSION=2_5_2
+VERSION=2_5_3
 echo "Making tinyxml $VERSION"
 
 rm -rf ./docs/*
